@@ -6,6 +6,14 @@ Revision history for Net::DNS
 
 *** 0.63, UNRELEASED
 
+Feature NotifyHandler in Nameserver
+			
+The NotifyHandler is a new attribute to the nameserver used in the
+same way as the ReplyHandler except that it is executed when the
+opcode is NS_NOTIFY (RFC1996). It takes the same arguments as the
+reply handler (i.e. $qname, $qclass, $qtype, $peerhost, and $query).
+Corrections made in the documentation.
+
 Fix rt.cpan.org #32937: 5.11 introduces new warning on uc(undef)
 
   The patch supplied fixes for methods where undefined arguments were
